--- a/lumin_team_syte.html
+++ b/lumin_team_syte.html
@@ -752,8 +752,8 @@
     <script>
         // Данные команды
         const team = [
-            { name: 'Lumin Core', role: 'Программист', bio: 'Архитектор кода, фанат чистых функций и тёмных тем.', avatar: '👨‍💻' },
-            { name: 'KiberSkovorodka', role: 'Художник', bio: 'Создаёт миры и персонажей. Вдохновляется мрачным фэнтези.', avatar: '🎨' },
+            { name: 'Lumin Core', role: 'Team Lead', bio: 'Проектирует архитектуру ПО и координирует разработку.', avatar: '👨‍💻' },
+            { name: 'KiberSkovorodka', role: 'Художник-Иллюстратор', bio: 'Создаёт миры и персонажей.', avatar: '🎨' },
             { name: 'Mr. Excelent', role: 'UI/UX дизайнер', bio: 'Отвечает за то, чтобы интерфейсы были удобными и красивыми.', avatar: '📱' },
             { name: 'Mak1ma1', role: 'Композитор', bio: 'Пишет музыку, которая остаётся в сердце.', avatar: '🎵' }
         ];
