--- a/lumin_team_syte.html
+++ b/lumin_team_syte.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>LuminTeam — инди‑студия</title>
+    <title>LuminTeam</title>
     <!-- Фавикон и иконка для Apple через raw.githubusercontent -->
     <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Simple-Day1/LuminTeamMiniApp/main/assets/logo_sprite.jpg">
     <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/Simple-Day1/LuminTeamMiniApp/main/assets/logo_sprite.jpg">
@@ -659,7 +659,7 @@
         <div id="homePage" class="page active">
             <h1>LuminTeam</h1>
             <p style="font-size: 1.2rem; color: #ccc; margin-bottom: 2rem;">
-                Инди‑студия, создающая игры с душой. Мы верим, что пиксели могут рассказать историю.
+                Создаём игры для тех, кто ищет большего. Вместо привычных механик — свежий опыт, вместо клише — эмоции. LuminTeam.
             </p>
 
             <h2>Команда</h2>
@@ -686,10 +686,10 @@
         <div id="projectPage" class="page">
             <h1>«Песнь Сорокопута»</h1>
             <p style="font-size: 1.2rem; color: #ccc; margin-bottom: 2rem;">
-                Гибрид визуальной новеллы и RPG. Исследуйте мир, принимайте решения, влияйте на сюжет.
+                Гибрид визуальной новеллы, исследования мира и динамических событий. Влияйте на сюжет, проходите QTE и мини-игры.
             </p>
 
-            <h2>Прогресс разработки</h2>
+            <h2>Прогресс разработки первого эпизода</h2>
             <div class="progress-section">
                 <div class="progress-item">
                     <div class="progress-header"><span>Геймплей</span> <span>20%</span></div>
@@ -729,7 +729,7 @@
             <div class="gallery-grid" id="backstageGallery"></div>
 
             <p style="color: #666; margin-top: 1rem; font-size: 0.9rem;">
-                * Изображения взяты для примера. Замените ссылки на свои.
+                
             </p>
         </div>
     </div>
@@ -761,15 +761,11 @@
         // Концепт-арты (ссылки через raw.githubusercontent)
         const conceptArts = [
             { src: 'https://raw.githubusercontent.com/Simple-Day1/LuminTeamMiniApp/main/assets/images/gallery/main_menu.JPG', alt: 'Концепт 1 — Фон', title: 'Главное меню' },
-            { src: 'https://raw.githubusercontent.com/Simple-Day1/LuminTeamMiniApp/main/assets/images/gallery/character.jpg', alt: 'Концепт 2 — Персонаж', title: 'Главный герой' },
-            { src: 'https://raw.githubusercontent.com/Simple-Day1/LuminTeamMiniApp/main/assets/images/gallery/location.jpg', alt: 'Концепт 3 — Локация', title: 'Заброшенный храм' },
+            { src: 'https://raw.githubusercontent.com/Simple-Day1/LuminTeamMiniApp/main/assets/images/gallery/main_menu.JPG', alt: 'Концепт 1 — Фон', title: 'Главное меню' },
         ];
 
         // Бэкстейдж (тоже через raw.githubusercontent)
         const backstageItems = [
-            { src: 'https://raw.githubusercontent.com/Simple-Day1/LuminTeamMiniApp/main/assets/images/backstage/bts1.jpg', caption: 'Набросок персонажа', date: '2026-01-15' },
-            { src: 'https://raw.githubusercontent.com/Simple-Day1/LuminTeamMiniApp/main/assets/images/backstage/bts2.jpg', caption: '3D‑моделирование', date: '2026-02-01' },
-            { src: 'https://raw.githubusercontent.com/Simple-Day1/LuminTeamMiniApp/main/assets/images/backstage/bts3.jpg', caption: 'Запись голоса', date: '2026-02-10' },
         ];
 
         let currentConceptIndex = 0;
