--- a/lumin_team_syte.html
+++ b/lumin_team_syte.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <!-- Фавикон и Apple Touch Icon -->
-    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Simple-Day1/LuminTeamMiniApp/main/assets/logo_sprite.jpg">
-    <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/Simple-Day1/LuminTeamMiniApp/main/assets/logo_sprite.jpg">
+    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Simple-Day1/LuminTeamMiniApp/main/assets/favicon_sprite.png">
+    <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/Simple-Day1/LuminTeamMiniApp/main/assets/favicon_sprite.png">
 
     <!-- Telegram WebApp SDK -->
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
